[tool.poetry]
name = "repl_python3_Baby-Blackjack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
timer = "^0.2.2"
replit = "^3.2.4"
pygame = "^2.1.0"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
